--- a/404.html
+++ b/404.html
@@ -102,19 +102,19 @@ License: You must have a valid license from official store to legally use the th
                   </ul>
                 </li>
                 <li class="relative border-l border-gray-800 hover:bg-gray-900">
-                  <a class="block py-3 px-6 border-b-2 border-transparent" href="#">Sport</a>
+                  <a class="block py-3 px-6 border-b-2 border-transparent" href="category/sport.html">Sport</a>
                 </li>
                 <li class="relative border-l border-gray-800 hover:bg-gray-900">
-                  <a class="block py-3 px-6 border-b-2 border-transparent" href="#">Travel</a>
+                  <a class="block py-3 px-6 border-b-2 border-transparent" href="category/travel.html">Travel</a>
                 </li>
                 <li class="relative border-l border-gray-800 hover:bg-gray-900">
-                  <a class="block py-3 px-6 border-b-2 border-transparent" href="#">Techno</a>
+                  <a class="block py-3 px-6 border-b-2 border-transparent" href="category/techno.html">Techno</a>
                 </li>
                 <li class="relative border-l border-gray-800 hover:bg-gray-900">
-                  <a class="block py-3 px-6 border-b-2 border-transparent" href="#">Worklife</a>
+                  <a class="block py-3 px-6 border-b-2 border-transparent" href="category/worklife.html">Worklife</a>
                 </li>
                 <li class="relative border-l border-gray-800 hover:bg-gray-900">
-                  <a class="block py-3 px-6 border-b-2 border-transparent" href="#">Future</a>
+                  <a class="block py-3 px-6 border-b-2 border-transparent" href="category/future.html">Future</a>
                 </li>
                 <li class="relative border-l border-gray-800 hover:bg-gray-900">
                   <a class="block py-3 px-6 border-b-2 border-transparent" href="#">More</a>
